--- a/anmeldetool-web/src/main/web/src/app/app.component.html
+++ b/anmeldetool-web/src/main/web/src/app/app.component.html
@@ -1,9 +1,10 @@
 <ng-container *ngIf="vereineLoaded | async; else loading">
-  <ng-container *ngIf="authenticated; else login"> </ng-container>
+  <app-nav-bar></app-nav-bar>
+  <ng-container *ngIf="authenticated; else login"> 
+    <router-outlet></router-outlet>
+  </ng-container>
 </ng-container>
 
-<app-nav-bar></app-nav-bar>
-<router-outlet></router-outlet>
 <ng-template #login>
   <div *ngIf="dialogOpen" class="overlay">
     <!--div [class]="getOverlayContentClass()">
