--- a/anmeldetool-web/src/main/web/src/app/events/event-list/event-list.component.html
+++ b/anmeldetool-web/src/main/web/src/app/events/event-list/event-list.component.html
@@ -1,12 +1,19 @@
+<ng-container *ngIf="anlaesseLoaded | async; else loading">
 <h1>ZTV Anlässe</h1>
 <hr>
 <div class="row">
-    <div *ngFor="let event of events" class="col-md-5">
+    <div *ngFor="let anlass of anlaesse" class="col-md-4">
         <!--(click)="handleThumbnailClick(event.name)"-->
         <!-- (eventClick)="handleEventClicked($event)"für was-->
-        <app-event-thumbnail #thumbnail  [event]="event"></app-event-thumbnail>
-        <h3>{{thumbnail.someProperty}}</h3>
-        <button class="bt-btn-primary" (click)="thumbnail.getName()">gets Name</button>
+        <app-event-thumbnail #thumbnail  [anlass]="anlass"></app-event-thumbnail>
+        <!--h3>{{thumbnail.someProperty}}</h3>
+        <button class="bt-btn-primary" (click)="thumbnail.getName()">gets Name</button-->
     </div>
 </div>
+</ng-container>
 
+<ng-template #loading>
+    <div class="center">
+        <mat-spinner style="margin: 0 auto"></mat-spinner>
+    </div>
+</ng-template>
