--- a/anmeldetool-web/src/main/web/src/app/events/events-detail/events-detail.component.css
+++ b/anmeldetool-web/src/main/web/src/app/events/events-detail/events-detail.component.css
@@ -1,4 +1,21 @@
 .container {
- padding-left: 20px;
- padding-right: 20px;   
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.drag-drop-list {
+  border: solid 1px #ccc;
+  background: white;
+  border-radius: 4px;
+  overflow: hidden;
+  display: block;
+  max-width: 240px;
+  min-height: 100px;
+}
+
+.col {
+  padding-left: 5px;
+  padding-right: 5px;
+  margin-left: 1em;
+  margin-right: 1em;
 }
