--- a/anmeldetool-web/src/main/web/src/app/nav/nav-bar/nav-bar.component.html
+++ b/anmeldetool-web/src/main/web/src/app/nav/nav-bar/nav-bar.component.html
@@ -8,20 +8,20 @@
       <div class="collapse navbar-collapse show" id="navbarCollapse">
         <ul class="nav navbar-nav">
           <li class="nav-item active">
-            <a [routerLink]="['/events']" class="nav-link" routerLinkActive="active"
+            <a [routerLink]="['/anlass']" class="nav-link" routerLinkActive="active"
             [routerLinkActiveOptions]="{exact:true}">All Events <span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item"><a [routerLink]="['/events/new']" routerLinkActive="active" class="nav-link">Create Event</a></li>
+          <li class="nav-item"><a [routerLink]="['/anlass/new']" routerLinkActive="active" class="nav-link">Anlass erstellen</a></li>
           <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Events
+                  Anlaesse
                 </a>
                 <!--div *ngFor="let event of events | async" class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                   <a class="dropdown-item" href="#">{{event.name}}</a>
                 </div-->
                 <div  class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <a *ngFor="let event of events | async" class="dropdown-item" href="#">{{event.name}}</a>
-                  <a *ngFor="let event of events | async" href="#">{{event.name}}</a>
+                  <a *ngFor="let anlass of anlaesse | async" class="dropdown-item" href="#">{{anlass.anlassBezeichnung}}</a>
+                  <a *ngFor="let anlass of anlaesse | async" href="#">{{anlass.anlassBezeichnung}}</a>
                 </div>
               </li>
           </ul>
