--- a/anmeldetool-web/src/main/web/src/app/events/create-event/create-event.component.html
+++ b/anmeldetool-web/src/main/web/src/app/events/create-event/create-event.component.html
@@ -1,42 +1,97 @@
 <h1>Neuer Anlass</h1>
-<hr>
-<div class="col-md-6">
-    <form [formGroup]="newEventForm" (ngSubmit)="saveEvent(newEventFrom.value)" 
-    autocomplete="off" novalidate>
+<hr />
+<!--div class="col-md-6">
+  <form
+    [formGroup]="newEventForm"
+    (ngSubmit)="saveEvent(newEventForm.value)"
+    autocomplete="off"
+    novalidate
+  >
     <div class="container">
-        <div class="row">
+      <div class="row">
         <div class="col">
-        <div class="form-group" [ngClass]="{'error': validateEventName}">
+          <div class="form-group" [ngClass]="{ error: validateEventName }">
             <label for="eventName">Anlass</label>
-            <em *ngIf="!validateEventName() && newEventForm.controls.eventName.errors.required">Pflicht</em>
-            <em *ngIf="!validateEventName() && newEventForm.controls.eventName.errors.pattern">Pflicht</em>
-            <input (ngModel)="newEvent.eventName" name="eventName" required id="eventName" type="text" class="form-control" placeholder="Name des Anlasses"/>
+            <em
+              *ngIf="
+                !validateEventName() &&
+                newEventForm.controls.eventName.errors.required
+              "
+              >Pflicht</em
+            >
+            <em
+              *ngIf="
+                !validateEventName() &&
+                newEventForm.controls.eventName.errors.pattern
+              "
+              >Pflicht</em
+            >
+            <input
+              (ngModel)="(newEvent.eventName)"
+              name="eventName"
+              required
+              id="eventName"
+              type="text"
+              class="form-control"
+              placeholder="Name des Anlasses"
+            />
+          </div>
         </div>
-        </div>
-        </div>
-        <div class="row">
-            <div class="col">
-        <div class="form-group" [ngClass]="{'error': validateAnlassDate}">
+      </div>
+      <div class="row">
+        <div class="col">
+          <div class="form-group" [ngClass]="{ error: validateAnlassDate }">
             <label for="eventDate">Datum</label>
-            <em *ngIf="!validateAnlassDate() && newEventForm.controls.anlassDate.errors.required">Pflicht</em>
-            <em *ngIf="!validateAnlassDate() && newEventForm.controls.anlassDate.errors.pattern">Pflicht</em>
-            <input (ngModel)="newEvent.date" name="eventDate" required id="eventDate" 
-            type="text" class="form-control datepicker" placeholder="{getCurrentDate()}"/>
+            <em
+              *ngIf="
+                !validateAnlassDate() &&
+                newEventForm.controls.anlassDate.errors.required
+              "
+              >Pflicht</em
+            >
+            <em
+              *ngIf="
+                !validateAnlassDate() &&
+                newEventForm.controls.anlassDate.errors.pattern
+              "
+              >Pflicht</em
+            >
+            <input
+              (ngModel)="(newEvent.date)"
+              name="eventDate"
+              required
+              id="eventDate"
+              type="text"
+              class="form-control datepicker"
+              placeholder="{getCurrentDate()}"
+            />
+          </div>
         </div>
+        <-div class="col">
+          <div class="input-group">
+            <input
+              class="form-control"
+              placeholder="yyyy-mm-dd"
+              name="dp"
+              [(ngModel)]="model"
+              ngbDatepicker
+              #d="ngbDatepicker"
+            />
+            <div class="input-group-append">
+              <button
+                class="btn btn-outline-secondary calendar"
+                (click)="d.toggle()"
+                type="button"
+              ></button>
             </div>
-            <div class="col">
-                    <div class="input-group">
-                            <input class="form-control" placeholder="yyyy-mm-dd"
-                                   name="dp" [(ngModel)]="model" ngbDatepicker #d="ngbDatepicker">
-                            <div class="input-group-append">
-                              <button class="btn btn-outline-secondary calendar" (click)="d.toggle()" type="button"></button>
-                            </div>
-                          </div>
-            </div>
-            </div>
+          </div>
+        </div>
+      </div>
 
-        <button type="submit" class="btn btn-primary">Save</button>
-        <button type="button" class="btn btn-default" (click)="cancel()">Cancel</button>
+      <button type="submit" class="btn btn-primary">Save</button>
+      <button type="button" class="btn btn-default" (click)="cancel()">
+        Cancel
+      </button>
     </div>
-    </form>
-</div>
+  </form>
+</div-->
