--- a/anmeldetool-web/src/main/web/src/app/events/event-thumbnail/event-thumbnail.component.html
+++ b/anmeldetool-web/src/main/web/src/app/events/event-thumbnail/event-thumbnail.component.html
@@ -1,22 +1,34 @@
 <div [routerLink]="['/anlass/', anlass?.id]" class="well hoverwell thumbnail">
-<!--div class="well hoverwell thumbnail"-->
-<div class="row">
+  <!--div class="well hoverwell thumbnail"-->
+  <div class="row">
     <div class="col-sm">
-        <h2>{{anlass.anlassBezeichnung}}</h2>
+      <h2>{{ anlass.anlassBezeichnung }}</h2>
     </div>
-</div>
-<div class="row">
+  </div>
+  <div class="row">
     <div class="col-sm" [ngClass]="getStartTimeClass()">
-        <span *ngIf="anlass.startDatum!==anlass.endDatum">von</span><span *ngIf="anlass.startDatum!==anlass.endDatum">am</span>: {{anlass.startDatum | date :'EEEE, d MMMM , y'}}</div>
-    <div class="col-sm" *ngIf="anlass.startDatum===anlass.endDatum">bis: {{anlass.endDatum | date :'EEEE, d MMMM , y'}}</div>
-</div>
-<div class="row">
-    <div class="col-sm">Geschlecht: {{anlass.tiTu}}</div>
-    <div class="col-sm">Startberechtigt: {{anlass.tiefsteKategorie}} bis {{anlass.hoechsteKategorie}}</div>
-</div>
-    <mat-checkbox [(ngModel)]="vereinStarted" (click)="vereinStartedClicked($event)">Verein started</mat-checkbox>
-<div *ngIf="vereinStarted" class="row">
-    <div class="col-sm">Teilnehmer: {{anzahlTeilnehmer}}</div>
-    <div class="col-sm">Wertungsrichter: {{statusWertungsrichter}}</div>
-</div>
+      <span *ngIf="anlass.startDatum !== anlass.endDatum">am</span>
+      <span *ngIf="anlass.startDatum === anlass.endDatum">von</span>:
+      {{ anlass.startDatum | date: "EEEE, d MMMM , y" }}
+    </div>
+    <div class="col-sm" *ngIf="anlass.startDatum === anlass.endDatum">
+      bis: {{ anlass.endDatum | date: "EEEE, d MMMM , y" }}
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm">Geschlecht: {{ anlass.tiTu }}</div>
+    <div class="col-sm">
+      Startberechtigt: {{ anlass.tiefsteKategorie }} bis
+      {{ anlass.hoechsteKategorie }}
+    </div>
+  </div>
+  <mat-checkbox
+    [(ngModel)]="vereinStarted"
+    (click)="vereinStartedClicked($event)"
+    >Verein started</mat-checkbox
+  >
+  <div *ngIf="vereinStarted" class="row">
+    <div class="col-sm">Teilnehmer: {{ anzahlTeilnehmer }}</div>
+    <div class="col-sm">Wertungsrichter: {{ statusWertungsrichter }}</div>
+  </div>
 </div>
