--- a/anmeldetool-web/src/main/web/src/app/nav/nav-bar/nav-bar.component.css
+++ b/anmeldetool-web/src/main/web/src/app/nav/nav-bar/nav-bar.component.css
@@ -1,18 +1,20 @@
 .navbar-brand {
-    font-size: 20px;
+  font-size: 20px;
 }
 .nav.navbar-nav {
-    font-size: 14px;
+  font-size: 14px;
 }
 
 #searchForm {
-    margin-right: 100px;
+  margin-right: 100px;
 }
 
 @media (max-width: 1200px) {
-    #searchForm {display:none};
+  #searchForm {
+    display: none;
+  }
 }
 
 li > a.active {
-    color: #F97924;
+  color: #f97924;
 }
