--- a/anmeldetool-web/src/main/web/src/app/nav/nav-bar/nav-bar.component.html
+++ b/anmeldetool-web/src/main/web/src/app/nav/nav-bar/nav-bar.component.html
@@ -1,45 +1,81 @@
 <!-- https://getbootstrap.com/docs/4.0/components/navbar/ -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <!--div class="container-fluid"-->
-      <!--div class="navbar-header"-->
-        <a class="navbar-brand" >Ressort GETU</a>
-      <!--/div-->
+  <!--div class="container-fluid"-->
+  <!--div class="navbar-header"-->
+  <a class="navbar-brand">Ressort GETU</a>
+  <!--/div-->
 
-      <div class="collapse navbar-collapse show" id="navbarCollapse">
-        <ul class="nav navbar-nav">
-          <li class="nav-item active">
-            <a [routerLink]="['/anlass']" class="nav-link" routerLinkActive="active"
-            [routerLinkActiveOptions]="{exact:true}">All Events <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item"><a [routerLink]="['/anlass/new']" routerLinkActive="active" class="nav-link">Anlass erstellen</a></li>
-          <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Anlaesse
-                </a>
-                <!--div *ngFor="let event of events | async" class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+  <div class="collapse navbar-collapse show" id="navbarCollapse">
+    <ul class="nav navbar-nav">
+      <li class="nav-item active">
+        <a
+          [routerLink]="['/anlass']"
+          class="nav-link"
+          routerLinkActive="active"
+          [routerLinkActiveOptions]="{ exact: true }"
+          >All Events <span class="sr-only">(current)</span></a
+        >
+      </li>
+      <li class="nav-item">
+        <a
+          [routerLink]="['/anlass/new']"
+          routerLinkActive="active"
+          class="nav-link"
+          >Anlass erstellen</a
+        >
+      </li>
+      <li class="nav-item dropdown">
+        <a
+          class="nav-link dropdown-toggle"
+          href="#"
+          id="navbarDropdownMenuLink"
+          data-toggle="dropdown"
+          aria-haspopup="true"
+          aria-expanded="false"
+        >
+          Anlaesse
+        </a>
+        <!--div *ngFor="let event of events | async" class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                   <a class="dropdown-item" href="#">{{event.name}}</a>
                 </div-->
-                <div  class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <a *ngFor="let anlass of anlaesse | async" class="dropdown-item" href="#">{{anlass.anlassBezeichnung}}</a>
-                  <a *ngFor="let anlass of anlaesse | async" href="#">{{anlass.anlassBezeichnung}}</a>
-                </div>
-              </li>
-          </ul>
-          <form class="nav navbar-nav form-inline" id="searchForm">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
-        <div class="navbar-header navbar-right">
-            <ul class="nav navbar-nav">
-                <li>
-                  <!--a *ngIf="!authService.isAuthenticated()" [routerLink]="['user/login']">Login</a-->
-                  <a *ngIf="authService.isAuthenticated()" [routerLink]="['teilnehmer/teilnehmer']" class="nav-link">Teilnehmer</a>
-                </li>
-                <li>
-                  <a *ngIf="authService.isAuthenticated()" [routerLink]="['user/user']" class="nav-link">Benutzerdaten</a>
-                </li>
-            </ul>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          <!--a *ngFor="let anlass of anlaesse | async" class="dropdown-item" href="#">{{anlass.anlassBezeichnung}}</a-->
+          <!--a *ngFor="let anlass of anlaesse | async" href="#">{{anlass.anlassBezeichnung}}</a-->
         </div>
-      </div>
-    <!--/div-->
+      </li>
+    </ul>
+    <form class="nav navbar-nav form-inline" id="searchForm">
+      <input
+        class="form-control mr-sm-2"
+        type="search"
+        placeholder="Search"
+        aria-label="Search"
+      />
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
+        Search
+      </button>
+    </form>
+    <div class="navbar-header navbar-right">
+      <ul class="nav navbar-nav">
+        <li>
+          <!--a *ngIf="!authService.isAuthenticated()" [routerLink]="['user/login']">Login</a-->
+          <a
+            *ngIf="authService.isAuthenticated()"
+            [routerLink]="['teilnehmer/teilnehmer']"
+            class="nav-link"
+            >Teilnehmer</a
+          >
+        </li>
+        <li>
+          <a
+            *ngIf="authService.isAuthenticated()"
+            [routerLink]="['user/user']"
+            class="nav-link"
+            >Benutzerdaten</a
+          >
+        </li>
+      </ul>
+    </div>
+  </div>
+  <!--/div-->
 </nav>
