--- a/anmeldetool-web/src/main/web/src/app/nav/nav-bar/nav-bar.component.html
+++ b/anmeldetool-web/src/main/web/src/app/nav/nav-bar/nav-bar.component.html
@@ -61,7 +61,7 @@
           <!--a *ngIf="!authService.isAuthenticated()" [routerLink]="['user/login']">Login</a-->
           <a
             *ngIf="authService.isAuthenticated()"
-            [routerLink]="['teilnehmer/teilnehmer']"
+            [routerLink]="['teilnehmer']"
             class="nav-link"
             >Teilnehmer</a
           >
