--- a/anmeldetool-web/src/main/web/src/app/verein/teilnehmer/teilnehmer-table/teilnehmer-table.component.html
+++ b/anmeldetool-web/src/main/web/src/app/verein/teilnehmer/teilnehmer-table/teilnehmer-table.component.html
@@ -1,8 +1,11 @@
 <div *ngIf="isTeilnahmenLoaded | async; else loading">
-
   <div class="example-header">
     <mat-form-field>
-      <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter" />
+      <input
+        matInput
+        (keyup)="applyFilter($event.target.value)"
+        placeholder="Filter"
+      />
     </mat-form-field>
   </div>
 
@@ -15,10 +18,18 @@
           Name
         </mat-header-cell>
         <mat-cell *matCellDef="let row; let rowIndex = index" class="w_20">
-          <input type="text" placeholder="Nachname" aria-label="Nachname" matInput
-            [formControl]="teilnehmerControls[rowIndex][0]" #tooltip="matTooltip" matTooltip="Gib den Nachnamen ein"
-            matTooltipPosition="below" matTooltipHideDelay="100"
-            (change)="changeTeilnehmer($event, row, rowIndex, 0)" />
+          <input
+            type="text"
+            placeholder="Nachname"
+            aria-label="Nachname"
+            matInput
+            [formControl]="teilnehmerControls[rowIndex][0]"
+            #tooltip="matTooltip"
+            matTooltip="Gib den Nachnamen ein"
+            matTooltipPosition="below"
+            matTooltipHideDelay="100"
+            (change)="changeTeilnehmer($event, row, rowIndex, 0)"
+          />
         </mat-cell>
       </ng-container>
 
@@ -28,10 +39,18 @@
           Vorname
         </mat-header-cell>
         <mat-cell *matCellDef="let row; let rowIndex = index" class="w_20">
-          <input type="text" placeholder="Vorname" aria-label="Vorname" matInput
-            [formControl]="teilnehmerControls[rowIndex][1]" #tooltip="matTooltip" matTooltip="Gib den Vornamen ein"
-            matTooltipPosition="below" matTooltipHideDelay="100"
-            (change)="changeTeilnehmer($event, row, rowIndex, 1)" />
+          <input
+            type="text"
+            placeholder="Vorname"
+            aria-label="Vorname"
+            matInput
+            [formControl]="teilnehmerControls[rowIndex][1]"
+            #tooltip="matTooltip"
+            matTooltip="Gib den Vornamen ein"
+            matTooltipPosition="below"
+            matTooltipHideDelay="100"
+            (change)="changeTeilnehmer($event, row, rowIndex, 1)"
+          />
         </mat-cell>
       </ng-container>
 
@@ -41,10 +60,18 @@
           Jahrg
         </mat-header-cell>
         <mat-cell *matCellDef="let row; let rowIndex = index" class="w_5">
-          <input type="text" placeholder="Jahrg" aria-label="Jahrgang" matInput
-            [formControl]="teilnehmerControls[rowIndex][2]" #tooltip="matTooltip" matTooltip="Gib den Jahrgang ein"
-            matTooltipPosition="below" matTooltipHideDelay="100"
-            (change)="changeTeilnehmer($event, row, rowIndex, 2)" />
+          <input
+            type="text"
+            placeholder="Jahrg"
+            aria-label="Jahrgang"
+            matInput
+            [formControl]="teilnehmerControls[rowIndex][2]"
+            #tooltip="matTooltip"
+            matTooltip="Gib den Jahrgang ein"
+            matTooltipPosition="below"
+            matTooltipHideDelay="100"
+            (change)="changeTeilnehmer($event, row, rowIndex, 2)"
+          />
         </mat-cell>
         <!--
         [ngStyle]="{'color':'teilnehmerControls[rowIndex][2].errors' ? 'red'}"/>
@@ -53,23 +80,41 @@
       </ng-container>
 
       <!-- Anlass Column -->
-      <ng-container *ngFor="let anlass of anlaesse; let colIndex = index; let last = last"
-        [matColumnDef]="anlass.anlassBezeichnung">
+      <ng-container
+        *ngFor="let anlass of anlaesse; let colIndex = index; let last = last"
+        [matColumnDef]="anlass.anlassBezeichnung"
+      >
         <mat-header-cell *matHeaderCellDef mat-sort-header class="kategorie">
           <div class="rotate">
-            <span> {{ anlass.anlassBezeichnung }}</span>
+            <span> {{ anlass.anlassBezeichnung.replace("%", "-") }}</span>
           </div>
           <div class="below">
-            <mat-checkbox (change)="checkedClicked($event, colIndex)" [ngModel]="checked[colIndex]">Teilnahme
+            <mat-checkbox
+              (change)="checkedClicked($event, colIndex)"
+              [ngModel]="checked[colIndex]"
+              >Teilnahme
             </mat-checkbox>
           </div>
         </mat-header-cell>
         <mat-cell *matCellDef="let row; let rowIndex = index" class="kategorie">
-          <mat-select type="text" placeholder="keine Teilnahme" aria-label="Kategorie" matInput
-            [formControl]="teilnahmenControls[rowIndex][colIndex]" #tooltip="matTooltip"
-            matTooltip="Wähle die Kategorie aus" matTooltipPosition="below" matTooltipHideDelay="100"
-            (selectionChange)="change($event, false ,row, rowIndex, colIndex, anlass)">
-            <mat-option *ngFor="let option of getKategorien(anlass)" [value]="option">
+          <mat-select
+            type="text"
+            placeholder="keine Teilnahme"
+            aria-label="Kategorie"
+            matInput
+            [formControl]="teilnahmenControls[rowIndex][colIndex]"
+            #tooltip="matTooltip"
+            matTooltip="Wähle die Kategorie aus"
+            matTooltipPosition="below"
+            matTooltipHideDelay="100"
+            (selectionChange)="
+              change($event, false, row, rowIndex, colIndex, anlass)
+            "
+          >
+            <mat-option
+              *ngFor="let option of getKategorien(anlass)"
+              [value]="option"
+            >
               {{ option }}
             </mat-option>
           </mat-select>
@@ -80,20 +125,47 @@
           </mat-option>
         </mat-autocomplete-->
         </mat-cell>
-        <ng-container *ngIf="!last" [matColumnDef]="anlass.anlassBezeichnung + 'Btn'">
+        <ng-container
+          *ngIf="!last"
+          [matColumnDef]="anlass.anlassBezeichnung + 'Btn'"
+        >
           <mat-header-cell *matHeaderCellDef class="centeredHeader">
-            <button mat-raised-button (click)="copyAll($event, colIndex)" [disabled]="!checked[colIndex]">
-              <mat-icon class="material-icons color_gray" aria-hidden="false" aria-label="Kategorie kopieren"
-                #tooltip="matTooltip" matTooltip="Kategorien aller Teilnehmenden kopieren" matTooltipPosition="below"
-                matTooltipHideDelay="100">arrow_right_alt</mat-icon>
+            <button
+              mat-raised-button
+              (click)="copyAll($event, colIndex)"
+              [disabled]="!checked[colIndex]"
+            >
+              <mat-icon
+                class="material-icons color_gray"
+                aria-hidden="false"
+                aria-label="Kategorie kopieren"
+                #tooltip="matTooltip"
+                matTooltip="Kategorien aller Teilnehmenden kopieren"
+                matTooltipPosition="below"
+                matTooltipHideDelay="100"
+                >arrow_right_alt</mat-icon
+              >
             </button>
           </mat-header-cell>
-          <mat-cell *matCellDef="let row; let rowIndex = index" class="centered">
-            <button mat-raised-button (click)="copy($event, row, rowIndex, colIndex, anlass)"
-              [disabled]="!checked[colIndex]">
-              <mat-icon class="material-icons color_gray" aria-hidden="false" aria-label="Kategorie kopieren"
-                #tooltip="matTooltip" matTooltip="Kategorie kopieren" matTooltipPosition="below"
-                matTooltipHideDelay="100">arrow_right_alt</mat-icon>
+          <mat-cell
+            *matCellDef="let row; let rowIndex = index"
+            class="centered"
+          >
+            <button
+              mat-raised-button
+              (click)="copy($event, row, rowIndex, colIndex, anlass)"
+              [disabled]="!checked[colIndex]"
+            >
+              <mat-icon
+                class="material-icons color_gray"
+                aria-hidden="false"
+                aria-label="Kategorie kopieren"
+                #tooltip="matTooltip"
+                matTooltip="Kategorie kopieren"
+                matTooltipPosition="below"
+                matTooltipHideDelay="100"
+                >arrow_right_alt</mat-icon
+              >
             </button>
           </mat-cell>
         </ng-container>
@@ -106,9 +178,17 @@
         </mat-header-cell>
         <mat-cell *matCellDef="let row; let rowIndex = index" class="aktion">
           <button mat-raised-button>
-            <mat-icon class="material-icons color_gray" aria-hidden="false" aria-label="Teilnehmer löschen"
-              #tooltip="matTooltip" matTooltip="Teilnehmer löschen" matTooltipPosition="below" matTooltipHideDelay="100"
-              (click)="delete($event, row, rowIndex)">delete</mat-icon>
+            <mat-icon
+              class="material-icons color_gray"
+              aria-hidden="false"
+              aria-label="Teilnehmer löschen"
+              #tooltip="matTooltip"
+              matTooltip="Teilnehmer löschen"
+              matTooltipPosition="below"
+              matTooltipHideDelay="100"
+              (click)="delete($event, row, rowIndex)"
+              >delete</mat-icon
+            >
           </button>
         </mat-cell>
       </ng-container>
@@ -116,11 +196,14 @@
       <mat-header-row *matHeaderRowDef="allDisplayedColumns"></mat-header-row>
       <mat-row *matRowDef="let row; columns: allDisplayedColumns"> </mat-row>
     </mat-table>
-
   </div>
 </div>
 
-<mat-paginator [pageSize]="pageSize" [pageSizeOptions]="[15, 20, 25, 50, 100]" [length]="anzahlTeilnehmer">
+<mat-paginator
+  [pageSize]="pageSize"
+  [pageSizeOptions]="[15, 20, 25, 50, 100]"
+  [length]="anzahlTeilnehmer"
+>
 </mat-paginator>
 
 <ng-template #loading>
