--- a/anmeldetool-web/src/main/web/src/app/events/event-thumbnail/event-thumbnail.component.html
+++ b/anmeldetool-web/src/main/web/src/app/events/event-thumbnail/event-thumbnail.component.html
@@ -2,7 +2,7 @@
   <!--div class="well hoverwell thumbnail"-->
   <div class="row">
     <div class="col-sm">
-      <h2>{{ anlass.anlassBezeichnung }}</h2>
+      <h2>{{ getCleaned() }}</h2>
     </div>
   </div>
   <div class="row">
