--- a/anmeldetool-web/src/main/web/src/app/events/events-detail/events-detail.component.css
+++ b/anmeldetool-web/src/main/web/src/app/events/events-detail/events-detail.component.css
@@ -14,8 +14,12 @@
 }
 
 .col {
+  padding-top: 5px;
+  padding-bottom: 5px;
   padding-left: 5px;
   padding-right: 5px;
-  margin-left: 1em;
-  margin-right: 1em;
+}
+h3 {
+  font-weight: 500;
+  margin-bottom: 0px;
 }
