--- a/anmeldetool-web/src/main/web/src/app/events/events-detail/events-detail.component.html
+++ b/anmeldetool-web/src/main/web/src/app/events/events-detail/events-detail.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-11">
-      <h2>{{ anlass.anlassBezeichnung }}</h2>
+      <h2>{{ getCleaned() }}</h2>
     </div>
   </div>
   <div class="row">
@@ -35,7 +35,20 @@
   </div>
   <div class="row">
     <div class="col-sm">
-      <div class="col-sm">Wertungsrichter: {{ statusWertungsrichter }}</div>
+      Benötigte Wertungsrichter Brevet 1: {{ statusWertungsrichter }}
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm">
+      Benötigte Wertungsrichter Brevet 2: {{ statusWertungsrichter }}
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm">
+      <div class="row">
+        <div class="col-sm"><h3>Verfügbare Wertungsrichter</h3></div>
+        <div class="col-sm"><h3>Ausgewählte Wertungsrichter</h3></div>
+      </div>
       <div class="row">
         <div class="col-sm">
           <mat-chip-list
@@ -45,7 +58,7 @@
             #allWrsList="cdkDropList"
             [cdkDropListData]="availableWertungsrichter"
             [cdkDropListConnectedTo]="[assignedWrList]"
-            cdkDropListOrientation="horizontal"
+            cdkDropListOrientation="vertical"
             (cdkDropListDropped)="drop($event)"
           >
             <mat-chip
@@ -57,7 +70,7 @@
               matTooltipPosition="above"
               matTooltipHideDelay="1000"
             >
-              {{ wr }}
+              {{ wr.vorname + " " + wr.name }}
             </mat-chip>
           </mat-chip-list>
         </div>
@@ -79,14 +92,19 @@
               matTooltipPosition="above"
               matTooltipHideDelay="1000"
             >
-              {{ wr }}
+              {{ wr.vorname + " " + wr.name }}
             </mat-chip>
           </mat-chip-list>
         </div>
       </div>
     </div>
-    <div [routerLink]="['/user/user']" class="well hoverwell thumbnail">
-      Wertungsrichter bearbeiten
+    <div class="col-sm">
+      <div [routerLink]="['/user/user']" class="well hoverwell thumbnail">
+        Wertungsrichter bearbeiten
+      </div>
     </div>
+  </div>
+  <div class="row">
+    <div class="col-sm">Wertungsrichter: {{ statusWertungsrichter }}</div>
   </div>
 </div>
